# wslc-compose

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: MIGRATION.md  index.html
examples/demo/: .env  compose.yaml
examples/demo/html/: index.html
src/wslc_compose/: __init__.py  __main__.py  cli.py  engine.py  flags.py  interpolation.py  loader.py  model.py  shim.py
tests/: test_engine.py  test_flags.py  test_interpolation.py  test_loader.py  test_shim.py
